--- a/hw1.src/hw.tex
+++ b/hw1.src/hw.tex
@@ -4,8 +4,6 @@
 \usepackage{url}
 \usepackage{amsmath}
 \usepackage{graphicx}
-\usepackage{forest}
-\usepackage{amsthm}
 
 \newcommand{\semester}{Fall 2017}
 \newcommand{\assignmentId}{1}
@@ -16,11 +14,14 @@
 \newcommand{\bw}{{\bf w}}
 
 \title{CS 5350/6350: Machine Learining \semester}
-\author{Homework \assignmentId \ Solution\\ UNID: u1143683}
-
+\author{Homework \assignmentId}
+\date{Handed out: \releaseDate\\
+  Due date: \dueDate}
 
 \begin{document}
 \maketitle
+
+\input{general-instructions}
 
 \input{question1}
 
