--- a/Solution/Experiment/IPython Dir/Preprocessing and Testing.ipynb
+++ b/Solution/Experiment/IPython Dir/Preprocessing and Testing.ipynb
@@ -102,6 +102,11 @@
     "    print(ent)\n",
     "    return ent\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "def info_gain_attr(list, S_list):\n",
     "    print(set(list[:,0]))\n",
     "    attr_lists = [x for i,j in groupby(list[:,1])]\n",
@@ -112,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# First Name Longer than last name feature\n",
