--- a/Solution/ML HW 1 - Solution/question2.tex
+++ b/Solution/ML HW 1 - Solution/question2.tex
@@ -8,6 +8,7 @@
 $$
 x_1+ x_4\geq 1
 $$
+weight vector $\boldsymbol w = [1, 1]$ and $bias\  b = 1$
 
 \item Classification:\\
 
@@ -29,33 +30,11 @@ Classifier accuracy $= 7/7$
 
 \item
 
-The combined dataset: \\
-
-	\begin{table}[h]
-            \centering
-            \begin{tabular}{cccc|c}
-            $x_1$ & $x_2$ & $x_3$ & $x_4$ & $o$  \\ \hline
-            1  & 0  & 1  & 1  & 1  \\
-            0  & 1  & 0  & 1  & 1  \\
-            0  & 0  & 1  & 0  & -1 \\
-            0  & 0  & 0  & 1  & 1  \\
-            0  & 0  & 1  & 1  & 1  \\
-            0  & 0  & 0  & 0  & -1 \\
-            1  & 0  & 1  & 0  & 1  \\
-            1  & 1  & 0  & 0  & 1  \\
-            1  & 1  & 1  & 1  & 1  \\
-            1  & 1  & 1  & 0  & 1  \\
-            0  & 1  & 0  & 0  & -1 \\
-            0  & 1  & 1  & 0  & -1 \\
-            0  & 1  & 1  & 1  & 1  \\
-            1  & 0  & 0  & 0  & 1  \\
-            1  & 0  & 0  & 1  & 1  \\
-            1  & 1  & 0  & 1  & 1  \\
-            \end{tabular}
-        \end{table}
 
 The classifer, \\
-$$x_1 + x_4 \geq 1$$ fits the above truth table perfectly.
+$$x_1 + x_4 \geq 1$$ 
+weight vector $\boldsymbol w = [1, 1]$ and $bias\  b = 1$,
+fits the given truth table perfectly.
 
 \end{enumerate}
 
