--- a/Solution/ML HW 1 - Solution/question1.tex
+++ b/Solution/ML HW 1 - Solution/question1.tex
@@ -127,39 +127,19 @@ The attribute $Human$ provides the best prediction of target attribute $Invade$ 
 \fbox{
 {\footnotesize
 	\begin{forest}
-	for tree={l sep+=.2cm,s sep+=0.1cm,shape=rectangle, rounded corners,
+	for tree={l sep+=.2cm,s sep+=1.1cm,shape=rectangle, rounded corners,
     draw, align=center,
     top color=white, bottom color=gray!20}	
 	[$Human$
 		[$Yes$, edge label = {node[midway, left]{$Not Care$}}]
 		[$Technology$, edge label = {node[midway, midway]{$Like$}}
 			[$Environment$, edge label = {node[midway, left]{$Yes$}}
-				[$Distance$, edge label = {node[midway, left]{$Yes$}}
-					[$Y$, edge label = {node[midway, midway]{$1$}}]
-					[$Y$, edge label = {node[midway, midway]{$2$}}]
-					[$Yes$, edge label = {node[midway, midway]{$3$}}]
-					[$Y$, edge label = {node[midway, midway]{$4$}}]				
-				]
-				[$Distance$, edge label = {node[midway, right]{$No$}}
-					[$No$, edge label = {node[midway, midway]{$1$}}]
-					[$N$, edge label = {node[midway, midway]{$2$}}]
-					[$N$, edge label = {node[midway, midway]{$3$}}]
-					[$No$, edge label = {node[midway, midway]{$4$}}]	
-				]
+				[$Yes$, edge label = {node[midway, left]{$Yes$}}]
+				[$No$, edge label = {node[midway, right]{$No$}}]
 			]
 			[$Environment$, edge label = {node[midway, right]{$No$}}
-				[$Distance$, edge label = {node[midway, left]{$Yes$}}
-					[$N$, edge label = {node[midway, midway]{$1$}}]
-					[$N$, edge label = {node[midway, midway]{$2$}}]
-					[$No$, edge label = {node[midway, midway]{$3$}}]
-					[$N$, edge label = {node[midway, midway]{$4$}}]		
-				]
-				[$Distance$, edge label = {node[midway, right]{$No$}}
-					[$N$, edge label = {node[midway, midway]{$1$}}]
-					[$N$, edge label = {node[midway, midway]{$2$}}]
-					[$N$, edge label = {node[midway, midway]{$3$}}]
-					[$N$, edge label = {node[midway, midway]{$4$}}]			
-				]
+				[$No$, edge label = {node[midway, left]{$Yes$}}]
+				[$No$, edge label = {node[midway, right]{$No$}}]
 			]		
 		]
 		[$No$, edge label = {node[midway, right]{$Hate$}}]	
@@ -180,13 +160,52 @@ The attribute $Human$ provides the best prediction of target attribute $Invade$ 
         \end{tabular}
         \end{table}
 
-Accuracy is $2/3$
+Accuracy is $2/3 = 66.67\%$
 
 \end{enumerate}
 
+\item
+\begin{enumerate}
+\item 
+Information gain of an attribute $A$ is given by,
 
+\begin{equation*}
+Gain(S,A) = MajorityError(S) - \sum_{v \in Values(A)}\frac{|S_v|}{|S|}MajorityError(S_v)
+\end{equation*}
 
+Total Majority Error,
+$S = 1 - 5/9 = 0.44$
 
+\begin{enumerate}
+\item 
+Feature $A$ = Technology\\
+
+For $v = Yes$,\\
+$S_v = 3$\\
+$p_+ = 1/3$ \ \ \ 
+$p_- = 2/3$\\
+$MajorityError(S_v) = 0.33$\\
+
+For $v = No$,\\
+$S-v = 6$\\
+$MajorityError(S_v) = 0.33$\\
+
+$Gain(S, Technology) = 0.44 - (6/9)0.33 - (3/9)0.33 = 0.106$\\
+
+\item Feature $A$ = Environment\\
+$Gain(S, Environment) = 0.217$\\
+
+\item Feature $A$ = Human\\
+$Gain(S, Human) = 0.328$\\
+
+\item Feature $A = Distance$\\
+$Gain(S,Distance) = 0.106$\\
+\end{enumerate}
+The attribute Human has highest information gain with majority error as the measure of impurity.
+
+\item
+Highest information gain was obtained for the attribute Human, so it will be selected as the root node for the decision tree. We will obtain a similar tree.
+\end{enumerate}
 
 
 
